[gd_scene load_steps=20 format=3 uid="uid://nb53yqn7qmg4"]

[ext_resource type="Texture2D" uid="uid://b047kbkscmnos" path="res://Sprites/shadow_krutitajs.png" id="1_cwbru"]
[ext_resource type="Script" path="res://Scripts/shadow_krutitajs.gd" id="1_gc7um"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_h2mmn"]
[ext_resource type="Shader" uid="uid://b6ehipwo7iqss" path="res://Shaders/damage_flash.tres" id="3_8syme"]
[ext_resource type="PackedScene" uid="uid://kaqdvuaks3ve" path="res://Scenes/shadow.tscn" id="3_erau1"]
[ext_resource type="AudioStream" uid="uid://dnvso8y63g7cy" path="res://Audio/Sounds/enemy_hurt.wav" id="6_pd5cl"]
[ext_resource type="AudioStream" uid="uid://b8wa1urrkqvum" path="res://Audio/Sounds/enemy_death.wav" id="7_3h3d3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_emu3v"]
resource_local_to_scene = true
shader = ExtResource("3_8syme")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0
shader_parameter/silhouette_color = Color(0, 0, 0, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7rlu8"]
radius = 8.0
height = 18.0

[sub_resource type="Animation" id="Animation_pgoai"]
resource_name = "DEATH"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_ypbmj"]
resource_name = "HIT"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 12, 13]
}

[sub_resource type="Animation" id="Animation_8ll7k"]
resource_name = "IDLE"
length = 1.5
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_8dp73"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3x84v"]
resource_name = "RUN"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ndd55"]
resource_name = "RUN_DOWN"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_hf7x2"]
resource_name = "RUN_UP"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smoothing2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3t08"]
_data = {
"DEATH": SubResource("Animation_pgoai"),
"HIT": SubResource("Animation_ypbmj"),
"IDLE": SubResource("Animation_8ll7k"),
"RESET": SubResource("Animation_8dp73"),
"RUN": SubResource("Animation_3x84v"),
"RUN_DOWN": SubResource("Animation_ndd55"),
"RUN_UP": SubResource("Animation_hf7x2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7g4ky"]
radius = 475.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xkjnh"]
radius = 25.02

[node name="ShadowKrutitajs" type="CharacterBody2D" groups=["enemy"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_gc7um")

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_h2mmn")

[node name="Sprite2D" type="Sprite2D" parent="Smoothing2D"]
material = SubResource("ShaderMaterial_emu3v")
texture = ExtResource("1_cwbru")
hframes = 18

[node name="Shadow" parent="Smoothing2D" node_paths=PackedStringArray("sprite") instance=ExtResource("3_erau1")]
sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_7rlu8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3t08")
}
speed_scale = 3.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
process_mode = 1
target_desired_distance = 19.9
radius = 40.0
max_neighbors = 5
max_speed = 210.0
debug_path_custom_color = Color(0, 0, 1, 1)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(0, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_7g4ky")

[node name="RoamTimer" type="Timer" parent="."]
autostart = true

[node name="HasLineOfSight" type="RayCast2D" parent="."]
position = Vector2(0, 15)
target_position = Vector2(480, 0)

[node name="AreaToHit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToHit"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_xkjnh")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(1, 1.9)

[node name="FollowPlayer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="DeathDespawnTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="DamageFlashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pd5cl")
volume_db = -20.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3h3d3")
volume_db = -30.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_roam_timer_timeout"]
[connection signal="timeout" from="FollowPlayer" to="." method="_on_follow_player_timeout"]
[connection signal="timeout" from="DeathDespawnTimer" to="." method="_on_death_despawn_timer_timeout"]
[connection signal="timeout" from="DamageFlashTimer" to="." method="_on_damage_flash_timer_timeout"]
